--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <p>👨‍💻 Développeur passionné par la technologie et l'innovation</p>
         <nav>
             <a href="#about">À propos</a>
-            <a href="#projects">Projets</a>
+            <a href="https://github.com/yahyaelarousy">Projets</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
