--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <nav>
             <a href="#about">À propos</a>
             <a href="https://github.com/yahyaelarousy">Projets</a>
-            <a href="#contact">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
