--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
 </head>
 <body style="background-color: black;">
     <div>
-        <input type="email" name="email" id="">
+        <input type="email" name="email" id="email">
+        <input type="text" name ="text" id ="text">
     </div>
     
 </body>
