--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,15 @@
     <title>Document</title>
 </head>
 <body style="background-color: black;">
-    <div>
-        <input type="email" name="email" id="email">
-        <input type="text" name ="text" id ="text">
-    </div>
+    header>
+        <h1>Bienvenue à mon Portfolio</h1>
+        <p>👨‍💻 Développeur passionné par la technologie et l'innovation</p>
+        <nav>
+            <a href="#about">À propos</a>
+            <a href="https://github.com/yahyaelarousy">Projets</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
     
 </body>
 </html>
