--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+         header {
+            background: linear-gradient(to right, #ba0707, #000000);
+            color: rgb(255, 157, 0);
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+        }
+
+        header p {
+            font-size: 1rem;
+            margin-top: 10px;
+        }
+
+        nav {
+            margin-top: 10px;
+        }
+
+        nav a {
+            margin: 0 15px;
+            font-weight: bold;
+            color: white;
+            transition: color 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #ffdd57;
+        }
+
+        .about {
+            text-align: center;
+            padding: 50px 20px;
+        }
+
+        .about h2 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+            color: #4CAF50;
+        }
+
+        .about p {
+            line-height: 1.6;
+            max-width: 700px;
+            margin: 0 auto;
+            font-size: 1.1rem;
+        }
+    </style>
 </head>
 <body style="background-color: black;">
     header>
