--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,12 @@
         }
     </style>
 </head>
-<body style="background-color: black;">
+<body >
     header>
         <h1>Bienvenue à mon Portfolio</h1>
         <p>👨‍💻 Développeur passionné par la technologie et l'innovation</p>
         <nav>
-            <a href="#about">À propos</a>
+            <a href="index.html">À propos</a>
             <a href="https://github.com/yahyaelarousy">Projets</a>
             <a href="contact.html">Contact</a>
         </nav>
