--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body >
-    header>
+    <header>
         <h1>Bienvenue à mon Portfolio</h1>
         <p>👨‍💻 Développeur passionné par la technologie et l'innovation</p>
         <nav>
