--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
 </head>
 <body >
     <header>
-        <h1>Bienvenue à mon Portfolio</h1>
-        <p>👨‍💻 Développeur passionné par la technologie et l'innovation</p>
+        <h1>Contactez-moi</h1>
+        <p>👨‍💻 Vous avez un projet en tête ou une question ? N'hésitez pas à me contacter !</p>
         <nav>
             <a href="index.html">À propos</a>
             <a href="https://github.com/yahyaelarousy">Projets</a>
