--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,9 @@
             margin: 0 auto;
             font-size: 1.1rem;
         }
+        .body{
+            background-color: red;
+        }
     </style>
 </head>
 <body >
@@ -66,6 +69,8 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+
+    
     
 </body>
 </html>
