--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact - Mon Portfolio</title>
     <style>
-         header {
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
             background: linear-gradient(to right, #ba0707, #000000);
             color: rgb(255, 157, 0);
             padding: 20px 0;
@@ -30,6 +37,7 @@
             margin: 0 15px;
             font-weight: bold;
             color: white;
+            text-decoration: none;
             transition: color 0.3s ease;
         }
 
@@ -37,29 +45,69 @@
             color: #ffdd57;
         }
 
-        .about {
+        .contact {
             text-align: center;
             padding: 50px 20px;
         }
 
-        .about h2 {
+        .contact h2 {
             font-size: 2rem;
             margin-bottom: 20px;
             color: #4CAF50;
         }
 
-        .about p {
+        .contact p {
+            font-size: 1.1rem;
             line-height: 1.6;
             max-width: 700px;
             margin: 0 auto;
+        }
+
+        .contact-info {
+            margin-top: 20px;
             font-size: 1.1rem;
         }
-        .body{
-            background-color: red;
+
+        .contact-info p {
+            margin: 10px 0;
+        }
+
+        .contact-form {
+            margin-top: 30px;
+            max-width: 500px;
+            margin-left: auto;
+            margin-right: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact-form input,
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button {
+            background: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+
+        .contact-form button:hover {
+            background: #45a049;
         }
     </style>
 </head>
-<body >
+<body>
     <header>
         <h1>Contactez-moi</h1>
         <p>👨‍💻 Vous avez un projet en tête ou une question ? N'hésitez pas à me contacter !</p>
@@ -70,7 +118,23 @@
         </nav>
     </header>
 
-    
-    
+    <section class="contact">
+        <h2>📞 Me contacter</h2>
+        <p>Vous pouvez me joindre via les informations suivantes :</p>
+        <div class="contact-info">
+            <p>📧 Email : <a href="mailto:tonemail@example.com">tonemail@example.com</a></p>
+            <p>📍 Localisation : Settat, Maroc</p>
+        </div>
+
+        <div class="contact-form">
+            <h3>💬 Envoyez-moi un message</h3>
+            <form action="mailto:tonemail@example.com" method="post" enctype="text/plain">
+                <input type="text" name="name" placeholder="Votre nom" required>
+                <input type="email" name="email" placeholder="Votre email" required>
+                <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
+                <button type="submit">Envoyer</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
