--- a/contact.html
+++ b/contact.html
@@ -5,28 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Mon Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            background-color: #f9f9f9;
+            color: #333;
         }
 
         header {
-            background: linear-gradient(to right, #ba0707, #000000);
-            color: rgb(255, 157, 0);
+            background: linear-gradient(to right, #1a1a1a, #4a4a4a);
+            color: white;
             padding: 20px 0;
             text-align: center;
         }
 
         header h1 {
-            font-size: 2.5rem;
-            margin: 0;
-        }
-
-        header p {
-            font-size: 1rem;
-            margin-top: 10px;
+            font-size: 2.2rem;
         }
 
         nav {
@@ -42,75 +41,89 @@
         }
 
         nav a:hover {
-            color: #ffdd57;
+            color: #ffcc00;
         }
 
-        .contact {
+        .contact-container {
+            max-width: 800px;
+            margin: 50px auto;
+            background: white;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            padding: 50px 20px;
         }
 
-        .contact h2 {
+        .contact-container h2 {
+            color: #222;
+            margin-bottom: 10px;
             font-size: 2rem;
-            margin-bottom: 20px;
-            color: #4CAF50;
         }
 
-        .contact p {
+        .contact-container p {
             font-size: 1.1rem;
-            line-height: 1.6;
-            max-width: 700px;
-            margin: 0 auto;
+            color: #666;
+            margin-bottom: 20px;
         }
 
         .contact-info {
-            margin-top: 20px;
-            font-size: 1.1rem;
+            display: flex;
+            justify-content: space-around;
+            margin-bottom: 30px;
         }
 
-        .contact-info p {
-            margin: 10px 0;
+        .contact-info div {
+            text-align: center;
+        }
+
+        .contact-info i {
+            font-size: 1.5rem;
+            color: #ffcc00;
+            margin-bottom: 10px;
         }
 
         .contact-form {
-            margin-top: 30px;
-            max-width: 500px;
-            margin-left: auto;
-            margin-right: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            text-align: left;
+        }
+
+        .contact-form label {
+            font-weight: bold;
+            display: block;
+            margin: 10px 0 5px;
         }
 
         .contact-form input,
         .contact-form textarea {
             width: 100%;
             padding: 10px;
-            margin: 10px 0;
+            margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
-        }
-
-        .contact-form button {
-            background: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
             font-size: 1rem;
         }
 
+        .contact-form button {
+            width: 100%;
+            background: #ffcc00;
+            color: #222;
+            border: none;
+            padding: 12px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+
         .contact-form button:hover {
-            background: #45a049;
+            background: #e6b800;
         }
     </style>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>Contactez-moi</h1>
-        <p>👨‍💻 Vous avez un projet en tête ou une question ? N'hésitez pas à me contacter !</p>
         <nav>
             <a href="index.html">À propos</a>
             <a href="https://github.com/yahyaelarousy">Projets</a>
@@ -118,23 +131,37 @@
         </nav>
     </header>
 
-    <section class="contact">
-        <h2>📞 Me contacter</h2>
-        <p>Vous pouvez me joindre via les informations suivantes :</p>
+    <div class="contact-container">
+        <h2>Restons en contact</h2>
+        <p>Une question ou un projet ? Envoyez-moi un message et je vous répondrai rapidement.</p>
+
         <div class="contact-info">
-            <p>📧 Email : <a href="mailto:tonemail@example.com">tonemail@example.com</a></p>
-            <p>📍 Localisation : Settat, Maroc</p>
+            <div>
+                <i class="fas fa-envelope"></i>
+                <p>Email</p>
+                <p><a href="mailto:tonemail@example.com">tonemail@example.com</a></p>
+            </div>
+            <div>
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Localisation</p>
+                <p>Settat, Maroc</p>
+            </div>
         </div>
 
         <div class="contact-form">
-            <h3>💬 Envoyez-moi un message</h3>
             <form action="mailto:tonemail@example.com" method="post" enctype="text/plain">
-                <input type="text" name="name" placeholder="Votre nom" required>
-                <input type="email" name="email" placeholder="Votre email" required>
-                <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
-                <button type="submit">Envoyer</button>
+                <label for="name">Nom</label>
+                <input type="text" id="name" name="name" placeholder="Votre nom" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Votre email" required>
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Votre message" required></textarea>
+
+                <button type="submit">Envoyer le message</button>
             </form>
         </div>
-    </section>
+    </div>
 </body>
 </html>
