--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background: linear-gradient(to right, #1a1a1a, #4a4a4a);
+            background: linear-gradient(to right, #000000, #cb0909);
             color: white;
             padding: 20px 0;
             text-align: center;
