--- a/contact.html
+++ b/contact.html
@@ -55,14 +55,14 @@
         }
 
         .contact-container h2 {
-            color: #222;
+            color: #f61111;
             margin-bottom: 10px;
             font-size: 2rem;
         }
 
         .contact-container p {
             font-size: 1.1rem;
-            color: #666;
+            color: #e61f1f;
             margin-bottom: 20px;
         }
 
@@ -78,7 +78,7 @@
 
         .contact-info i {
             font-size: 1.5rem;
-            color: #ffcc00;
+            color: #ff2121;
             margin-bottom: 10px;
         }
 
@@ -104,8 +104,8 @@
 
         .contact-form button {
             width: 100%;
-            background: #ffcc00;
-            color: #222;
+            background: #0f0f0e;
+            color: #ed0202;
             border: none;
             padding: 12px;
             font-size: 1.2rem;
@@ -116,7 +116,7 @@
         }
 
         .contact-form button:hover {
-            background: #e6b800;
+            background: #ff0505;
         }
     </style>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
