--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         .contact-container {
             max-width: 800px;
             margin: 50px auto;
-            background: white;
+            background: linear-gradient(to right, #000000, #cb0909);
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -139,7 +139,7 @@
             <div>
                 <i class="fas fa-envelope"></i>
                 <p>Email</p>
-                <p><a href="mailto:tonemail@example.com">tonemail@example.com</a></p>
+                <p><a href="mailto:tonemail@example.com">eyahya484@gmail.com</a></p>
             </div>
             <div>
                 <i class="fas fa-map-marker-alt"></i>
