--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: #f9f9f9;
+            background-color: #040303;
             color: #333;
         }
 
