--- a/contact.html
+++ b/contact.html
@@ -55,14 +55,14 @@
         }
 
         .contact-container h2 {
-            color: #f61111;
+            color: #000000;
             margin-bottom: 10px;
             font-size: 2rem;
         }
 
         .contact-container p {
             font-size: 1.1rem;
-            color: #e61f1f;
+            color: #000000;
             margin-bottom: 20px;
         }
 
