--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         }
 
         header {
-            background: linear-gradient(to right, #000000, #cb0909);
+            background: linear-gradient(to right, #604e4e, #cc9d9d);
             color: white;
             padding: 20px 0;
             text-align: center;
