--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         header {
-            background: linear-gradient(to right, #ba0707, #000000);
+            background: linear-gradient(to right, #e8adad, #8d7f7f);
             color: rgb(255, 157, 0);
             padding: 20px 0;
             text-align: center;
