--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         .contact-container {
             max-width: 800px;
             margin: 50px auto;
-            background: linear-gradient(to right, #000000, #cb0909);
+            background: linear-gradient(to right, #a48e8e, #ec8686);
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
